tests/miniJava/neg/003530_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if length 0 ) { } else { } } }
